--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -1,36 +1,57 @@
-@font-face{
- font-family:'digital-7';
- src: url('/fonts/digital-7.ttf');
+@font-face {
+	font-family: 'digital-7';
+	src: url('/fonts/digital-7.ttf');
 }
 
 .List-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  .ListItem-wrapper {
-    display: flex;
-    margin: 10px;
-    .item-frame {
-      display: flex;
-      align-items: center;
-      border: 1px solid red;
-      .item-date {
-        font-family: 'digital-7';
-        font-size: 26px;
-        margin: 10px;
-        .utc {
-          font-size: 12px;
-          font-family: arial;
-        };
-      };
-      .item-temp {
-        font-size: 32px;
-      }
-      img {
-        width: 50px;
-        height: auto;
-        margin-left: 10px;
-      }
-    }
-  }
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	.ListItem-wrapper {
+		display: flex;
+		justify-content: center;
+		margin: 10px;
+		width: 50%;
+		position: relative;
+		left: -500px;
+		animation-name: entry;
+		animation-duration: 3s;
+		animation-fill-mode: forwards;
+		.item-frame {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 300px;
+			background: linear-gradient(to right, #fff 0, #1976d2 100%);
+			box-shadow: 10px 7px 10px #353638;
+			.item-date {
+				font-family: 'digital-7';
+				font-size: 26px;
+				margin: 10px;
+				.utc {
+					font-size: 12px;
+					font-family: arial;
+				}
+			}
+			.item-temp {
+				font-size: 32px;
+				color: #313438;
+			}
+			img {
+				width: 50px;
+				height: auto;
+				margin-right: 10px;
+			}
+		}
+	}
+}
+@keyframes entry {
+	from {
+		transform: translateX(0);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(500px);
+		opacity: 1;
+	}
 }
