--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,15 +1,17 @@
 .Footer-wrapper {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  .footer-frame {
-    background-color: #424242;
-    color: #F5F5F5;
-    height: 70px;
-    p {
-      margin: 0px;
-      padding: 4px;
-    }
-  }
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	.footer-frame {
+		display: flex;
+		align-items: center;
+		background-color: #424242;
+		color: #f5f5f5;
+		height: 30px;
+		span {
+			margin-left: 10px;
+			padding: 4px;
+		}
+	}
 }
