--- a/src/styles/Actual.css
+++ b/src/styles/Actual.css
@@ -8,6 +8,9 @@
     background-color: #b3e5fc;
     position: relative;
     box-shadow: 10px 7px 10px #353638; }
+    @media screen and (max-width: 768px) {
+      .Actual-wrapper .actual-frame {
+        width: 60%; } }
     .Actual-wrapper .actual-frame .Humidity,
     .Actual-wrapper .actual-frame .Pressure {
       margin: 0;
@@ -19,6 +22,9 @@
       padding-left: 30px;
       font-size: 52px;
       color: #313438; }
+      @media screen and (max-width: 986px) {
+        .Actual-wrapper .actual-frame .Temperature {
+          font-size: 42px; } }
     .Actual-wrapper .actual-frame .City-country {
       margin: 0;
       padding-top: 5px;
@@ -33,6 +39,19 @@
       right: 20px;
       width: 40%;
       height: auto; }
+      @media screen and (max-width: 986px) {
+        .Actual-wrapper .actual-frame img {
+          width: 30%;
+          margin-top: 20px; } }
+      @media screen and (max-width: 768px) {
+        .Actual-wrapper .actual-frame img {
+          margin-top: 0; } }
+      @media screen and (max-width: 480px) {
+        .Actual-wrapper .actual-frame img {
+          margin-top: 20px; } }
+      @media screen and (max-width: 365px) {
+        .Actual-wrapper .actual-frame img {
+          display: none; } }
 
 .not-found {
   text-align: center;
