--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -12,3 +12,6 @@
     .Footer-wrapper .footer-frame span {
       margin-left: 10px;
       padding: 4px; }
+    @media screen and (max-width: 480px) {
+      .Footer-wrapper .footer-frame .email {
+        display: none; } }
