--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,3 +1,5 @@
+@import 'mqMixin.scss';
+
 .Footer-wrapper {
 	position: fixed;
 	width: 100%;
@@ -12,6 +14,11 @@
 		span {
 			margin-left: 10px;
 			padding: 4px;
+		}
+		.email {
+			@include mQ(480px) {
+				display: none;
+			}
 		}
 	}
 }
