--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -6,24 +6,36 @@
     .Search-wrapper .Search-form .form-input {
       outline: none;
       border: 0;
-      color: #00796B;
+      color: #00796b;
       border-bottom: 1px solid #7d8084;
       font-size: 32px; }
       .Search-wrapper .Search-form .form-input::-webkit-input-placeholder {
-        color: #E0F2F1; }
+        color: #e0f2f1; }
       .Search-wrapper .Search-form .form-input:focus {
         border-bottom: 1px solid #009688; }
+      @media screen and (max-width: 768px) {
+        .Search-wrapper .Search-form .form-input {
+          width: 60%; } }
+      @media screen and (max-width: 480px) {
+        .Search-wrapper .Search-form .form-input {
+          width: 80%;
+          margin-left: 20px; } }
     .Search-wrapper .Search-form .form-button {
       margin-left: 20px;
       font-weight: 500;
-      background-color: #26A69A;
+      background-color: #26a69a;
       color: #eaefed;
       border: none;
       width: 100px;
       padding: 10px;
       cursor: pointer;
       transition: 0.7s; }
+      @media screen and (max-width: 480px) {
+        .Search-wrapper .Search-form .form-button {
+          width: 100%;
+          margin-top: 10px;
+          margin-left: 0; } }
       .Search-wrapper .Search-form .form-button:hover {
-        background-color: #80CBC4; }
+        background-color: #80cbc4; }
       .Search-wrapper .Search-form .form-button .fa {
         padding-right: 10px; }
