--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+@font-face {
+	font-family: 'roboto-regular';
+	src: url('/fonts/roboto/Roboto-Regular.ttf');
+}
+
 html,
 body {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'roboto-regular';
 	height: 100%;
 }
