--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,9 +1,14 @@
+@font-face {
+  font-family: 'roboto-medium';
+  src: url("/fonts/roboto/Roboto-Medium.ttf"); }
+
 .Header-navbar {
   width: 100%;
   background-color: #009688;
   display: flex;
   justify-content: space-between; }
   .Header-navbar .Proj-title {
+    font-family: 'roboto-medium';
     font-size: 32px;
     margin: 10px 10px 10px 60px;
     color: #dcdfe5; }
