--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,14 +1,20 @@
+@font-face {
+	font-family: 'roboto-medium';
+	src: url('/fonts/roboto/Roboto-Medium.ttf');
+}
+
 $HeaderColor: #009688; // Teal
 $TextColor: #dcdfe5;
 
 .Header-navbar {
-  width: 100%;
-  background-color: $HeaderColor;
-  display: flex;
-  justify-content: space-between;
-  .Proj-title {
-    font-size: 32px;
-    margin: 10px 10px 10px 60px;
-    color: $TextColor
-  }
+	width: 100%;
+	background-color: $HeaderColor;
+	display: flex;
+	justify-content: space-between;
+	.Proj-title {
+		font-family: 'roboto-medium';
+		font-size: 32px;
+		margin: 10px 10px 10px 60px;
+		color: $TextColor;
+	}
 }
