--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -24,7 +24,7 @@
 			align-items: center;
 			justify-content: space-between;
 			width: 300px;
-			background: linear-gradient(to right, #fff 0, #1976d2 100%);
+			// background: linear-gradient(to right, #fff 0, #1976d2 100%);
 			box-shadow: 10px 7px 10px #353638;
 			.item-date {
 				font-family: 'digital-7';
