--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,4 +1,8 @@
 @import 'mqMixin.scss';
+@font-face {
+	font-family: 'roboto-medium';
+	src: url('/fonts/roboto/Roboto-Medium.ttf');
+}
 
 .Search-wrapper {
 	display: flex;
@@ -28,6 +32,7 @@
 		.form-button {
 			margin-left: 20px;
 			font-weight: 500;
+			font-family: 'roboto-medium';
 			background-color: #26a69a;
 			color: #eaefed;
 			border: none;
