Added different color for every even list item

--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -16,11 +16,14 @@
     animation-name: entry;
     animation-duration: 3s;
     animation-fill-mode: forwards; }
+    .List-wrapper .ListItem-wrapper:nth-child(2n) .item-frame {
+      background: linear-gradient(to right, #fff 0, #8bc34a 100%); }
     .List-wrapper .ListItem-wrapper .item-frame {
       display: flex;
       align-items: center;
       justify-content: space-between;
       width: 300px;
+      background: linear-gradient(to right, #fff 0, #1976d2 100%);
       box-shadow: 10px 7px 10px #353638; }
       .List-wrapper .ListItem-wrapper .item-frame .item-date {
         font-family: 'digital-7';
